fix: add better contrast to copyright logo

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -18,7 +18,7 @@
   &-copyright {
     font-size: 0.9em;
     margin-top: 0.5rem;
-    opacity: 0.3;
+    opacity: 0.5;
     text-align: center;
     @media (min-width: 340px) {
       font-size: 0.935em;
